--- a/text.html
+++ b/text.html
@@ -16,6 +16,7 @@
 		<br /><i>voluptatem tempore! Animi omnis debitis necessitatibus delectus voluptatem illo maiores veritatis,
 			impedit laborum</i>
 		<br /> <mark> sapiente. Eligendi enim officiis quod illo doloremque porro aperiam!</mark>
+		<br /><strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, laboriosam.</strong>
 	</p>
 </body>
 
